[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "dtschema/version.py"

[project]
name = "dtschema"
description = "DeviceTree validation schema and tools"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Rob Herring", email = "robh@kernel.org"},
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
dynamic = ["version"]

dependencies = [
    "ruamel.yaml>0.15.69",
    "jsonschema>=4.1.2,<4.18",
    "rfc3987",
    "pylibfdt",
]

[project.scripts]
dt-check-compatible = "dtschema.check_compatible:main"
dt-cmp-schema = "dtschema.cmp_schema:main"
dt-doc-validate = "dtschema.doc_validate:main"
dt-extract-example = "dtschema.extract_example:main"
dt-extract-props = "dtschema.extract_props:main"
dt-mk-schema = "dtschema.mk_schema:main"
dt-validate = "dtschema.dtb_validate:main"
dtb2py = "dtschema.dtb2py:main"

[project.urls]
Homepage="https://github.com/devicetree-org/dt-schema"
Source="https://github.com/devicetree-org/dt-schema"
